--- a/index.html
+++ b/index.html
@@ -221,64 +221,6 @@
             </div>
           </div>
         </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-2.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Video Marketing
-
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-3.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Site Analysis
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-4.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Social Media Marketing
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-5.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              SEO Optimization
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
       </div>
     </div>
   </section>
@@ -598,11 +540,10 @@
           <div class="col-md-3">
             <div class="info_logo">
               <h3>
-                Seotech
+                EduCode
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor indidunt ut labore et
-                dolore magna
+                EduCode adalah sebuah komunitas yang dirancang untuk mempermudah coders dalam menyelesaikan tugas di kampus
               </p>
             </div>
           </div>
@@ -637,7 +578,7 @@
                   <img src="images/telephone-white.png" width="12px" alt="">
                 </div>
                 <p>
-                  +01 1234567890
+                  +62 81275232909
                 </p>
               </a>
               <a href="">
@@ -645,7 +586,7 @@
                   <img src="images/envelope-white.png" width="18px" alt="">
                 </div>
                 <p>
-                  demo@gmail.com
+                  rivajasimbolon01@gmail.com
                 </p>
               </a>
             </div>
@@ -689,7 +630,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://html.design/">EduCode</a>
         </p>
       </div>
     </section>
