--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </p>
             <div class="btn-box">
               <a href="sbdt.html">
-                Read More
+                Baca Selengkapnya
               </a>
             </div>
           </div>
