--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Normal distribution
+                  Vaja
                 </h6>
                 <p>
                   It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -438,28 +438,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Normal distribution
-                </h6>
-                <p>
-                  It is a long established fact that a reader will be distracted by the readable content of a page when
-                  looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                  distribution of
-                  letters, as opposed to using 'Content here, content here', making it look
-                </p>
-                <img src="images/quote.png" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Normal distribution
+                  Ary
                 </h6>
                 <p>
                   It is a long established fact that a reader will be distracted by the readable content of a page when
