Memodifikasi materi sbdt

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               Sistem basis data (Database Management System / DBMS) adalah sistem perangkat lunak yang digunakan untuk mengelola dan mengatur data dalam basis data. 
             </p>
             <div class="btn-box">
-              <a href="sbdt.html">
+              <a href="#sbdt">
                 Baca Selengkapnya
               </a>
             </div>
@@ -228,36 +228,35 @@
 
   <!-- work section -->
 
-  <section class="work_section layout_padding">
+  <section class="work_section layout_padding" id="sbdt">
     <div class="container">
       <div class="heading_container">
         <h2>
-          How We Work!
+          Sistem Basis Data - Terdistribusi!
         </h2>
         <p>
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          ...
         </p>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
           <div class="detail_container">
             <div class="box b-1">
               <div class="top-box">
                 <div class="icon-box">
-                  <img src="images/work-i1.png" alt="">
+                  <img src="images/database.png" alt="">
                 </div>
                 <h5>
-                  We Generate A Good Idea First
+                  Apa itu Sistem Basis Data
                 </h5>
               </div>
               <div class="bottom-box">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim veniam
+                  Sistem Basis Data adalah kumpulan data yang terorganisir serta perangkat lunak (software) yang dirancang untuk mengelola  data tersebut. Sistem ini memungkinkan pengguna untuk menyimpan, mengelola, mengambil, dan memanipulasi data secara efisien. Sistem basis data digunakan untuk mendukung berbagai kebutuhan aplikasi, baik skala kecil hingga besar.
                 </p>
               </div>
             </div>
-            <div class="box b-1">
+            <!-- <div class="box b-1">
               <div class="top-box">
                 <div class="icon-box">
                   <img src="images/work-i2.png" alt="">
@@ -272,14 +271,10 @@
                   dolore magna aliqua. Ut enim ad minim veniam
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/work-img.png" alt="">
-          </div>
-        </div>
+        
       </div>
 
       <div class="btn-box">
