--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Seotech</title>
+  <title>EduCode - Company</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -51,16 +51,16 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="about.html"> Tentang</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html"> Services </a>
+                  <a class="nav-link" href="service.html"> Layanan </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contactLink">Contact Us</a>
+                  <a class="nav-link" href="#contactLink">Kontak Kami</a>
                 </li>
               </ul>
             </div>
@@ -82,9 +82,9 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
+   <!-- about section -->
 
-  <section class="about_section ">
+   <section class="about_section" id="aboutLink">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -96,12 +96,11 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Us
+                Tentang Kami
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              Website ini dibuat untuk sebuah langkah belajar tegnologi pemrograman. Disini akan memudahkan mahasiswa untuk belajar mandiri di tempat mana pun, karena disini akan dipaparkan materi materi mengenai pemrograman yang di ajarkan dosen maupun asisten dosen pada saat di dalam lingkungan kampus.
             </p>
             <a href="">
               Read More
@@ -156,7 +155,6 @@
       </div>
     </section>
 
-
     <!-- end contact section -->
 
 
@@ -168,11 +166,10 @@
           <div class="col-md-3">
             <div class="info_logo">
               <h3>
-                Seotech
+               educode
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor indidunt ut labore et
-                dolore magna
+                EduCode adalah sebuah komunitas yang dirancang untuk mempermudah coders dalam menyelesaikan tugas di kampus
               </p>
             </div>
           </div>
@@ -183,16 +180,16 @@
               </h4>
               <ul class="  ">
                 <li class=" ">
-                  <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="active">
-                  <a class="" href="about.html"> About</a>
+                  <a class="" href="about.html"> Tentang</a>
                 </li>
                 <li class="">
-                  <a class="" href="service.html"> Services </a>
+                  <a class="" href="service.html"> Layanan </a>
                 </li>
                 <li class="">
-                  <a class="" href="#contactLink">Contact Us</a>
+                  <a class="" href="#contactLink">Kontak Kami</a>
                 </li>
               </ul>
             </div>
@@ -207,7 +204,7 @@
                   <img src="images/telephone-white.png" width="12px" alt="">
                 </div>
                 <p>
-                  +01 1234567890
+                  +62 81275232909
                 </p>
               </a>
               <a href="">
@@ -215,7 +212,7 @@
                   <img src="images/envelope-white.png" width="18px" alt="">
                 </div>
                 <p>
-                  demo@gmail.com
+                  rivajasimbolon01@gmail.com
                 </p>
               </a>
             </div>
@@ -259,7 +256,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://html.design/">EduCode</a>
         </p>
       </div>
     </section>
