--- a/sbdt.html
+++ b/sbdt.html
@@ -12,13 +12,18 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Seotech - SBDT</title>
+  <title>EduCode - Company</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- prism -->
+  <link
+  href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-tomorrow.css"
+  rel="stylesheet"
+/>
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
@@ -52,7 +57,6 @@
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html"> Beranda</a>
-                  <!-- <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a> -->
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#aboutLink"> Tentang</a>
@@ -81,59 +85,102 @@
       </div>
     </header>
     <!-- end header section -->
-
-       <!-- slider section -->
-       <section class=" slider_section ">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-6 ">
-                    <div class="detail_box">
-                      <h1>
-                        Mari Belajar Bersama! 
-                      </h1>
-                      <p>
-                        Ingin belajar mengenai pemrograman ?  ini solusinyaa!! 
-                      </p>
-                      <div class="btn-box">
-                        <a href="" class="btn-1">
-                          Contact Us
-                        </a>
-                        <a href="" class="btn-2">
-                          Get A Quote
-                        </a>
-                      </div>
-                    </div>
+     
+    <!-- slider section -->
+    <section class=" slider_section ">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-7 ">
+                  <div class="detail_box">
+                    <h1>
+                      Materi Sistem Basis Data - Terdistribusi 
+                    </h1>
+                    <p>
+                      Ingin belajar mengenai database ?  ini solusinyaa!! 
+                    </p>
                   </div>
-                  <div class="col-md-6">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="">
-                    </div>
+                </div>
+                <div class="col-md-5">
+                  <div class="img-box">
+                    <img src="images/slider-img.png" alt="">
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="carousel_btn-container">
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
         </div>
-      </section>
-      <!-- end slider section -->
-
-
-
+      </div>
+    </section>
+    <!-- end slider section -->
   </div>
 
-  
+  <!-- work section -->
 
+  <section class="work_section layout_padding" id="sbdt">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="detail_container">
+            <div class="box b-1">
+              <div class="top-box">
+                <div class="icon-box">
+                  <img src="images/database.png" alt="">
+                </div>
+                <h5>
+                  Apa itu Sistem Basis Data
+                </h5>
+              </div>
+              <div class="bottom-box">
+                <p>
+                  Sistem Basis Data adalah kumpulan data yang terorganisir serta perangkat lunak (software) yang dirancang untuk mengelola  data tersebut. Sistem ini memungkinkan pengguna untuk menyimpan, mengelola, mengambil, dan memanipulasi data secara efisien. Sistem basis data digunakan untuk mendukung berbagai kebutuhan aplikasi, baik skala kecil hingga besar.
+                </p>
+              </div>
+            </div>
+            <!-- <div class="box b-1">
+              <div class="top-box">
+                <div class="icon-box">
+                  <img src="images/work-i2.png" alt="">
+                </div>
+                <h5>
+                  Then We Start Applying Ideas
+                </h5>
+              </div>
+              <div class="bottom-box">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim veniam
+                </p>
+              </div>
+            </div> -->
+          </div>
+        </div>        
+      </div>
+    </div>
+  </section>
+  <!-- end work section -->
+
+  <div class="container my-5">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Membuat User Replikasi - Master</h5>
+        <pre class="language-javascript">
+          <code id="code-block">
+              // Contoh kode JavaScript
+              function helloWorld() {
+                  console.log("Hello, World!");
+              }
+              helloWorld();
+          </code>
+              </pre>
+        <button class="btn btn-primary mt-3" onclick="copyCode()">
+          Salin Kode
+        </button>
+      </div>
+    </div>
+  </div>
   <div class="footer_bg">
 
     <!-- contact section -->
@@ -174,8 +221,6 @@
         </div>
       </div>
     </section>
-
-
     <!-- end contact section -->
 
 
@@ -187,11 +232,10 @@
           <div class="col-md-3">
             <div class="info_logo">
               <h3>
-                Seotech
+                EduCode
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor indidunt ut labore et
-                dolore magna
+                EduCode adalah sebuah komunitas yang dirancang untuk mempermudah coders dalam menyelesaikan tugas di kampus
               </p>
             </div>
           </div>
@@ -226,7 +270,7 @@
                   <img src="images/telephone-white.png" width="12px" alt="">
                 </div>
                 <p>
-                  +01 1234567890
+                  +62 81275232909
                 </p>
               </a>
               <a href="">
@@ -234,7 +278,7 @@
                   <img src="images/envelope-white.png" width="18px" alt="">
                 </div>
                 <p>
-                  demo@gmail.com
+                  rivajasimbolon01@gmail.com
                 </p>
               </a>
             </div>
@@ -269,7 +313,6 @@
         </div>
       </div>
     </section>
-
     <!-- end info_section -->
 
 
@@ -278,18 +321,19 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://html.design/">EduCode</a>
         </p>
       </div>
     </section>
     <!-- footer section -->
-
   </div>
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script type="text/javascript" src="js/custom.js"></script>
-
+  
+    <!-- Prism.js -->
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
 </body>
 
 </html>
