--- a/service copy.html
+++ b/service copy.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>EduCode - Company </title>
+  <title>Seotech</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -28,7 +28,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="sub_page">
 
   <div class="hero_area">
     <!-- header section strats -->
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              EduCode
+              Seotech
             </span>
           </a>
           </a>
@@ -50,18 +50,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
+                <li class="nav-item ">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"> About</a>
+                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html"> Beranda</a>
-                  <!-- <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a> -->
+                  <a class="nav-link" href="service.html"> Services </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> Tentang</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html"> Layanan </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#contactLink">Kontak Kami</a>
+                  <a class="nav-link" href="#contactLink">Contact Us</a>
                 </li>
               </ul>
             </div>
@@ -69,7 +68,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  Call : + 62 81275232909
+                  Call : + 01 1234567890
                 </span>
               </a>
               <form class="form-inline">
@@ -81,151 +80,96 @@
       </div>
     </header>
     <!-- end header section -->
-     
-    <!-- slider section -->
-    <section class=" slider_section ">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-8 ">
-                  <div class="detail_box">
-                    <h1>
-                      Mari Belajar Bersama! 
-                    </h1>
-                    <p>
-                      Ingin belajar mengenai pemrograman ?  ini solusinyaa!! 
-                    </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Contact Us
-                      </a>
-                      <a href="" class="btn-2">
-                        Get A Quote
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item ">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-6 ">
-                  <div class="detail_box">
-                    <h1>
-                      Ayo Mulai Dari Sekarang!
-                    </h1>
-                    <p>
-                     Jangan sia-siakan waktumu
-                    </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Contact Us
-                      </a>
-                      <a href="" class="btn-2">
-                        Get A Quote
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel_btn-container">
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </section>
-    <!-- end slider section -->
   </div>
-
-  <!-- about section -->
-
-  <section class="about_section" id="aboutLink">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/about-img2.png" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                Tentang Kami
-              </h2>
-            </div>
-            <p>
-              Website ini dibuat untuk sebuah langkah belajar tegnologi pemrograman. Disini akan memudahkan mahasiswa untuk belajar mandiri di tempat mana pun, karena disini akan dipaparkan materi materi mengenai pemrograman yang di ajarkan dosen maupun asisten dosen pada saat di dalam lingkungan kampus.
-            </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
 
   <!-- service section -->
   <section class="service_section layout_padding">
     <div class="container-fluid">
       <div class="heading_container">
         <h2>
-          Layanan Kami
+          Our Services
         </h2>
         <p>
-          <!-- Ada beberapa materi yang dipaparkan disini -->
+          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
 
-      <div class="service_container" id="serviceLink">
+      <div class="service_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/database-storage.png" alt="">
+            <img src="images/s-1.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
-              Sistem Basis Data - Terdistribusi
+              Brand Promotion
             </h5>
             <p>
-              Sistem basis data (Database Management System / DBMS) adalah sistem perangkat lunak yang digunakan untuk mengelola dan mengatur data dalam basis data. 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             </p>
-            <div class="btn-box">
-              <a href="sbdt.html">
-                Baca Selengkapnya
-              </a>
-            </div>
           </div>
         </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/s-2.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              Video Marketing
+
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/s-3.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              Site Analysis
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/s-4.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              Social Media Marketing
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/s-5.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              SEO Optimization
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="">
+          Read More
+        </a>
       </div>
     </div>
   </section>
   <!-- end service section -->
-
 
   <div class="footer_bg">
 
@@ -268,6 +212,7 @@
       </div>
     </section>
 
+
     <!-- end contact section -->
 
 
@@ -279,10 +224,11 @@
           <div class="col-md-3">
             <div class="info_logo">
               <h3>
-                EduCode
+                Seotech
               </h3>
               <p>
-                EduCode adalah sebuah komunitas yang dirancang untuk mempermudah coders dalam menyelesaikan tugas di kampus
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor indidunt ut labore et
+                dolore magna
               </p>
             </div>
           </div>
@@ -292,13 +238,13 @@
                 BASIC LINKS
               </h4>
               <ul class="  ">
-                <li class=" active">
+                <li class=" ">
                   <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="">
                   <a class="" href="about.html"> About</a>
                 </li>
-                <li class="">
+                <li class="active">
                   <a class="" href="service.html"> Services </a>
                 </li>
                 <li class="">
@@ -317,7 +263,7 @@
                   <img src="images/telephone-white.png" width="12px" alt="">
                 </div>
                 <p>
-                  +62 81275232909
+                  +01 1234567890
                 </p>
               </a>
               <a href="">
@@ -325,7 +271,7 @@
                   <img src="images/envelope-white.png" width="18px" alt="">
                 </div>
                 <p>
-                  rivajasimbolon01@gmail.com
+                  demo@gmail.com
                 </p>
               </a>
             </div>
@@ -369,7 +315,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">EduCode</a>
+          <a href="https://html.design/">Free Html Templates</a>
         </p>
       </div>
     </section>
@@ -380,6 +326,7 @@
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script type="text/javascript" src="js/custom.js"></script>
+
 
 </body>
 
