--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Seotech</title>
+  <title>EduCode - Company</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -51,16 +51,16 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="about.html"> Tentang</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="service.html"> Services </a>
+                  <a class="nav-link" href="service.html"> Layanan </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contactLink">Contact Us</a>
+                  <a class="nav-link" href="#contactLink">Kontak Kami</a>
                 </li>
               </ul>
             </div>
@@ -211,7 +211,6 @@
         </div>
       </div>
     </section>
-
 
     <!-- end contact section -->
 
