--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Seotech
+              Educode
             </span>
           </a>
           </a>
@@ -68,7 +68,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  Call : + 01 1234567890
+                  Hubungi : + 62 81275232909
                 </span>
               </a>
               <form class="form-inline">
@@ -100,11 +100,8 @@
               </h2>
             </div>
             <p>
-              Website ini dibuat untuk sebuah langkah belajar tegnologi pemrograman. Disini akan memudahkan mahasiswa untuk belajar mandiri di tempat mana pun, karena disini akan dipaparkan materi materi mengenai pemrograman yang di ajarkan dosen maupun asisten dosen pada saat di dalam lingkungan kampus.
+              Website ini dibuat untuk sebuah langkah belajar tegnologi pemrograman. Disini akan memudahkan mahasiswa untuk belajar mandiri di tempat mana pun, karena disini akan dipaparkan materi materi mengenai pemrograman yang di ajarkan dosen maupun asisten dosen pada saat di dalam lingkungan kampus. Kami juga menyedian beberapa layanan untuk materi pembelajaran terutama bidang pemrograman.
             </p>
-            <a href="">
-              Read More
-            </a>
           </div>
         </div>
       </div>
@@ -121,7 +118,7 @@
       <div class="container">
         <div class="heading_container">
           <h2>
-            Get In touch
+            Hubungi Kami
           </h2>
         </div>
       </div>
@@ -131,23 +128,23 @@
             <form>
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <input type="text" class="form-control" id="inputName4" placeholder="Name ">
+                  <input type="text" class="form-control" id="inputName4" placeholder="Nama ">
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email id">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                 </div>
 
               </div>
               <div class="form-row">
                 <div class="form-group col">
-                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subject">
+                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subjek">
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" id="inputMessage" placeholder="Message">
+                <input type="text" class="form-control" id="inputMessage" placeholder="Pesan">
               </div>
               <div class="d-flex justify-content-center">
-                <button type="submit" class="">Send</button>
+                <button type="submit" class="">Kirim</button>
               </div>
             </form>
           </div>
@@ -176,7 +173,7 @@
           <div class="col-md-3">
             <div class="info_links">
               <h4>
-                BASIC LINKS
+                Tautan Dasar
               </h4>
               <ul class="  ">
                 <li class=" ">
@@ -189,7 +186,7 @@
                   <a class="" href="service.html"> Layanan </a>
                 </li>
                 <li class="">
-                  <a class="" href="#contactLink">Kontak Kami</a>
+                  <a class="" href="#contactLink">Kontak</a>
                 </li>
               </ul>
             </div>
@@ -197,7 +194,7 @@
           <div class="col-md-3">
             <div class="info_contact">
               <h4>
-                CONTACT DETAILS
+                Rincian Kontak
               </h4>
               <a href="">
                 <div class="img-box">
@@ -220,10 +217,10 @@
           <div class="col-md-3">
             <div class="info_form ">
               <h4>
-                NEWSLETTER
+                Buletin
               </h4>
               <form action="">
-                <input type="email" placeholder="Enter your email">
+                <input type="email" placeholder="Masukkan email kamu!">
                 <button>
                   Subscribe
                 </button>
