--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  Call : + 62 81275232909
+                  Hubungi : + 62 81275232909
                 </span>
               </a>
               <form class="form-inline">
@@ -89,25 +89,25 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="row">
-                <div class="col-md-8 ">
+                <div class="col-md-6 ">
                   <div class="detail_box">
                     <h1>
                       Mari Belajar Bersama! 
                     </h1>
-                    <p>
+                    <!-- <p>
                       Ingin belajar mengenai pemrograman ?  ini solusinyaa!! 
-                    </p>
+                    </p> -->
                     <div class="btn-box">
-                      <a href="" class="btn-1">
+                      <!-- <a href="" class="btn-1">
                         Contact Us
                       </a>
                       <a href="" class="btn-2">
                         Get A Quote
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <div class="img-box">
                     <img src="images/slider-img.png" alt="">
                   </div>
@@ -123,16 +123,16 @@
                     <h1>
                       Ayo Mulai Dari Sekarang!
                     </h1>
-                    <p>
+                    <!-- <p>
                      Jangan sia-siakan waktumu
-                    </p>
+                    </p> -->
                     <div class="btn-box">
-                      <a href="" class="btn-1">
+                      <!-- <a href="" class="btn-1">
                         Contact Us
                       </a>
                       <a href="" class="btn-2">
                         Get A Quote
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                 </div>
@@ -178,8 +178,8 @@
             <p>
               Website ini dibuat untuk sebuah langkah belajar tegnologi pemrograman. Disini akan memudahkan mahasiswa untuk belajar mandiri di tempat mana pun, karena disini akan dipaparkan materi materi mengenai pemrograman yang di ajarkan dosen maupun asisten dosen pada saat di dalam lingkungan kampus.
             </p>
-            <a href="">
-              Read More
+            <a href="about.html">
+              Baca Selengkapnya
             </a>
           </div>
         </div>
@@ -234,7 +234,7 @@
       <div class="container">
         <div class="heading_container">
           <h2>
-            Get In touch
+            Hubungi Kami
           </h2>
         </div>
       </div>
@@ -244,23 +244,23 @@
             <form>
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <input type="text" class="form-control" id="inputName4" placeholder="Name ">
+                  <input type="text" class="form-control" id="inputName4" placeholder="Nama ">
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email id">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                 </div>
 
               </div>
               <div class="form-row">
                 <div class="form-group col">
-                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subject">
+                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subjek">
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" id="inputMessage" placeholder="Message">
+                <input type="text" class="form-control" id="inputMessage" placeholder="Pesan">
               </div>
               <div class="d-flex justify-content-center">
-                <button type="submit" class="">Send</button>
+                <button type="submit" class="">Kirim</button>
               </div>
             </form>
           </div>
@@ -289,20 +289,20 @@
           <div class="col-md-3">
             <div class="info_links">
               <h4>
-                BASIC LINKS
+                Tautan Dasar
               </h4>
               <ul class="  ">
                 <li class=" active">
-                  <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="">
-                  <a class="" href="about.html"> About</a>
+                  <a class="" href="about.html"> Tentang</a>
                 </li>
                 <li class="">
-                  <a class="" href="service.html"> Services </a>
+                  <a class="" href="service.html"> Layanan </a>
                 </li>
                 <li class="">
-                  <a class="" href="#contactLink">Contact Us</a>
+                  <a class="" href="#contactLink">Kontak</a>
                 </li>
               </ul>
             </div>
@@ -310,7 +310,7 @@
           <div class="col-md-3">
             <div class="info_contact">
               <h4>
-                CONTACT DETAILS
+                Rincian Kontak
               </h4>
               <a href="">
                 <div class="img-box">
@@ -333,12 +333,12 @@
           <div class="col-md-3">
             <div class="info_form ">
               <h4>
-                NEWSLETTER
+                Buletin
               </h4>
               <form action="">
-                <input type="email" placeholder="Enter your email">
+                <input type="email" placeholder="Masukkan email kamu!">
                 <button>
-                  Subscribe
+                  Berlangganan
                 </button>
               </form>
               <div class="social_box">
