--- a/service.html
+++ b/service.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Seotech
+              EduCode
             </span>
           </a>
           </a>
@@ -68,7 +68,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  Call : + 01 1234567890
+                  Hubungi : + 01 1234567890
                 </span>
               </a>
               <form class="form-inline">
@@ -87,25 +87,30 @@
     <div class="container-fluid">
       <div class="heading_container">
         <h2>
-          Our Services
+          Layanan Kami
         </h2>
         <p>
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Kami menyediakan beberapa layanan untuk materi belajar pemrograman secara mandiri / <i>autodidak</i>
         </p>
       </div>
 
       <div class="service_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/s-1.png" alt="">
+            <img src="images/database-storage.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
-              Brand Promotion
+              Sistem Basis Data - Terdistribusi
             </h5>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              Sistem basis data (Database Management System / DBMS) adalah sistem perangkat lunak yang digunakan untuk mengelola dan mengatur data dalam basis data. 
             </p>
+            <div class="btn-box">
+              <a href="sbdt.html">
+                Baca Selengkapnya
+              </a>
+            </div>
           </div>
         </div>
         <div class="box">
@@ -178,7 +183,7 @@
       <div class="container">
         <div class="heading_container">
           <h2>
-            Get In touch
+            Hubungi Kami
           </h2>
         </div>
       </div>
@@ -188,23 +193,23 @@
             <form>
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <input type="text" class="form-control" id="inputName4" placeholder="Name ">
+                  <input type="text" class="form-control" id="inputName4" placeholder="Nama ">
                 </div>
                 <div class="form-group col-md-6">
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email id">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
                 </div>
 
               </div>
               <div class="form-row">
                 <div class="form-group col">
-                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subject">
+                  <input type="text" class="form-control" id="inputSubject4" placeholder="Subjek">
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" id="inputMessage" placeholder="Message">
+                <input type="text" class="form-control" id="inputMessage" placeholder="Pesan">
               </div>
               <div class="d-flex justify-content-center">
-                <button type="submit" class="">Send</button>
+                <button type="submit" class="">Kirim</button>
               </div>
             </form>
           </div>
@@ -223,31 +228,30 @@
           <div class="col-md-3">
             <div class="info_logo">
               <h3>
-                Seotech
+                Educode
               </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor indidunt ut labore et
-                dolore magna
+                EduCode adalah sebuah komunitas yang dirancang untuk mempermudah coders dalam menyelesaikan tugas di kampus
               </p>
             </div>
           </div>
           <div class="col-md-3">
             <div class="info_links">
               <h4>
-                BASIC LINKS
+                Tautan Dasar
               </h4>
               <ul class="  ">
                 <li class=" ">
-                  <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="">
-                  <a class="" href="about.html"> About</a>
+                  <a class="" href="about.html"> Tentang</a>
                 </li>
                 <li class="active">
-                  <a class="" href="service.html"> Services </a>
+                  <a class="" href="service.html"> Layanan </a>
                 </li>
                 <li class="">
-                  <a class="" href="#contactLink">Contact Us</a>
+                  <a class="" href="#contactLink">Kontak</a>
                 </li>
               </ul>
             </div>
@@ -255,14 +259,14 @@
           <div class="col-md-3">
             <div class="info_contact">
               <h4>
-                CONTACT DETAILS
+                Rincian Kontak
               </h4>
               <a href="">
                 <div class="img-box">
                   <img src="images/telephone-white.png" width="12px" alt="">
                 </div>
                 <p>
-                  +01 1234567890
+                  +62 81275232909
                 </p>
               </a>
               <a href="">
@@ -270,7 +274,7 @@
                   <img src="images/envelope-white.png" width="18px" alt="">
                 </div>
                 <p>
-                  demo@gmail.com
+                  rivajasimbolon01@gmail.com
                 </p>
               </a>
             </div>
@@ -278,12 +282,12 @@
           <div class="col-md-3">
             <div class="info_form ">
               <h4>
-                NEWSLETTER
+                Buletin
               </h4>
               <form action="">
-                <input type="email" placeholder="Enter your email">
+                <input type="email" placeholder="Masukkan email kamu!">
                 <button>
-                  Subscribe
+                  Berlangganan
                 </button>
               </form>
               <div class="social_box">
