--- a/sbdt.html
+++ b/sbdt.html
@@ -133,7 +133,7 @@
                   Apa itu Sistem Basis Data - Terdistribusi
                 </h5>
               </div>
-              <div class="bottom-box" style="text-align: justify;">
+              <div class="bottom-box" style="text-align: justify; hyphens: auto; word-wrap: break-word;">
                 <p>
                   Sistem Basis Data adalah kumpulan data yang terorganisir serta perangkat lunak (software) yang dirancang untuk mengelola  data tersebut. Sistem ini memungkinkan pengguna untuk menyimpan, mengelola, mengambil, dan memanipulasi data secara efisien. Sistem basis data digunakan untuk mendukung berbagai kebutuhan aplikasi, baik skala kecil hingga besar. Sedangkan Sistem Basis Data Terdistribusi (Distributed Database System) adalah sistem basis data di mana data disimpan di beberapa lokasi yang berbeda, namun dikelola sedemikian rupa sehingga terlihat seperti satu kesatuan. Data di setiap lokasi dapat diakses melalui jaringan, dan sistem ini dirancang untuk memastikan ketersediaan, keandalan, dan konsistensi data di seluruh lokasi.
                 </p>
@@ -274,26 +274,7 @@
   </section>
   <!-- end work section -->
 
-  <!-- <div class="container mt-10">
-    <p>Code</p>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Membuat User Replikasi - Master</h5>
-        <pre class="language-javascript">
-          <code id="code-block">
-              // Contoh kode JavaScript
-              function helloWorld() {
-                  console.log("Hello, World!");
-              }
-              helloWorld();
-          </code>
-              </pre>
-        <button class="btn btn-primary mt-3" onclick="copyCode()">
-          Salin Kode
-        </button>
-      </div>
-    </div>
-  </div> -->
+ 
   <div class="footer_bg">
 
     <!-- contact section -->
