--- a/sbdt.html
+++ b/sbdt.html
@@ -152,7 +152,7 @@
                       <h6><b>Apa itu Replikasi?</b></h6>
                       <p>Replikasi adalah mekanisme di mana data dari satu server (master) disalin atau didistribusikan ke server lain (replica/slave). Proses ini bisa dilakukan secara otomatis berdasarkan konfigurasi tertentu, sehingga perubahan data pada server utama dapat direfleksikan pada salinan di server lain.</p>
                     </div>
-                    <img src="images/replikasi.png" alt="sketsa-replikasi" style="max-width: 40%; height: auto; border-radius: 8px;">
+                    <!-- <img src="images/replikasi.png" alt="sketsa-replikasi" style="max-width: 40%; height: auto; border-radius: 8px;"> -->
                   </h6>
                   <h6><b>Tujuan Replikasi</b></h6>
                   <ul>
